[gd_scene load_steps=4 format=3 uid="uid://cb7ihswc0gfap"]

[ext_resource type="Script" path="res://src/MainMenu.gd" id="1_dgca5"]
[ext_resource type="Texture2D" uid="uid://c86gv86ruupja" path="res://assets/menu/Title.png" id="2_u3uex"]
[ext_resource type="Texture2D" uid="uid://diuv4s3p4rjxp" path="res://assets/menu/background.png" id="3_gvf08"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dgca5")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -224.0
offset_top = -157.0
offset_right = 286.0
offset_bottom = 305.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_gvf08")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -351.0
offset_top = -163.0
offset_right = 1076.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_u3uex")
stretch_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.0
offset_top = -20.0
offset_right = 23.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="CreatureDensityUIBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="CreatureDensityLabel" type="Label" parent="VBoxContainer/CreatureDensityUIBox"]
layout_mode = 2
text = "Creature Density:"

[node name="CreatureDensitySlider" type="HSlider" parent="VBoxContainer/CreatureDensityUIBox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 1.0
scrollable = false
tick_count = 5

[node name="FoodScarcityUIBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="FoodScarcityLabel" type="Label" parent="VBoxContainer/FoodScarcityUIBox"]
layout_mode = 2
text = "Food Scarcity:"

[node name="FoodScarcitySlider" type="HSlider" parent="VBoxContainer/FoodScarcityUIBox"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
min_value = 1.0
max_value = 10.0
value = 1.0
scrollable = false
tick_count = 5

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Label" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -228.0
offset_top = -23.0
offset_right = 228.0
grow_horizontal = 2
grow_vertical = 0
text = "Devin Fahnestock, Ian Van Emmerik, and Tristan Ligtvoet
"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
